samples/_failures_safe/1761604173_28f741_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b368091b.c: In function ‘main’:
./samples/SAFE/__tmp_b368091b.c:149:9: error: expected expression at end of input
  149 |         if (sm.current_state == STATE_DONE || sm.current_state == STATE_ERROR)
      |         ^~
./samples/SAFE/__tmp_b368091b.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b368091b.c:149:9: error: expected declaration or statement at end of input
